<resources>
    <string name="app_name">Care Tech</string>



    <!-- Layout activity_main -->
    <string name="title_connexion">Connexion</string>
    <string name="identifiant_connexion">Identifiant : </string>
    <string name="motDePasse_connexion">Mot de passe : </string>
    <string name="Identifiant">lj@email.com</string>
    <string name="Mdp">abcd4</string>
    <!-- End Layout activity_main -->

    <!-- Layout my_account -->
    <string name="title_compte">Mon Compte</string>
    <string name="Nom_compte">Nom : </string>
    <string name="Prenom_compte">Prénom : </string>
    <string name="Tel_compte">Téléphone : </string>
    <string name="Mail_compte">Mail : </string>
    <string name="Edit_Password_compte">Modifier votre mot de passe </string>
    <string name="BtnEditAccount">Modifier</string>
    <string name="BtnValidEditAccount">Valider</string>
    <string name="BtnCancelEditAccount">Annuler</string>
    <!-- End Layout my_account -->

    <!-- Layout list_patient -->
    <string name="BtnMenu">Menu</string>
    <!-- END Layout list_patient -->

    <!-- Layout menu -->
    <string name="BtnProfil">Mon Compte</string>
    <string name="BtnDeco">Déconnexion</string>
    <!-- END Layout menu -->

    <!-- Layout edit_password -->
    <string name="TitleEditPwd">Changer le Mot de Passe</string>
    <string name="LastPwd">Ancien Mot de Passe : </string>
    <string name="NewPwd">Nouveau Mot de Passe : </string>
    <string name="VerifNewPwd">Vérification Mot de Passe : </string>
    <!-- End Layout edit_password -->

    <!-- Layout details_patients -->
    <string name="FichePatient">Changer le Mot de Passe</string>
    <string name="NumSecuPatient">Numéro de Sécurité Sociale : </string>
    <string name="LastNamePatient">Nom du Patient : </string>
    <string name="FirstNamePatient">Prénom du Patient : </string>
    <string name="DatePatient">Date de Naissance :</string>
    <string name="AdressePatient">Adresse Patient :</string>
    <string name="TelPatient">Téléphone :</string>
    <string name="EmailPatient">Email :</string>
    <string name="SexePatient">Sexe Patient :</string>
    <string name="PoidsPatient">Poids : </string>
    <string name="TaillePatient">Taille :</string>
    <string name="GroupeSanguinPatient">Groupe Sanguin :</string>
    <!-- End Layout details_patients -->
</resources>
